# tiny_machine

./: .gitlab-ci.yml  Cargo.toml  Readme.md  theme.css
src/: bin.rs  client.rs  lib.rs  server.rs
src/instructions/: error.rs  mod.rs  test.rs
src/machine/: error.rs  mod.rs  test.rs
src/memory/: error.rs  mod.rs  test.rs
src/registers/: error.rs  mod.rs  test.rs
src/state/: error.rs  mod.rs
src/ui/: disassembly.rs  memory.rs  mod.rs  ports.rs  registers.rs
test/: debug.py  fuzz.py
