[package]
name = "tiny_machine"
version = "0.2.0"
authors = ["Spenser Reinhardt <spereinh@cisco.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tm_server_1"
path = "src/server.rs"
required-features = ["lvl1"]
[[bin]]
name = "tm_server_2"
path = "src/server.rs"
required-features = ["lvl2"]
[[bin]]
name = "tm_server_3"
path = "src/server.rs"
required-features = ["lvl3"]

[dependencies]
log = {version="^0.4", features=["serde"]}
pretty_env_logger = "*"
colored = "^1"
clap = "^2"
bit_field = "^0.9"
bytes = "^0.4"
mio = "^0.6"
futures = "^0.1"
state_machine_future = "^0.1"
tokio = "^0.1"
tokio-core = "^0.1"

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 2

[profile.test]
opt-level = 2
debug = true
lto = false
codegen-units = 2

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 2

[features]
real_flag = []
lvl1 = []
lvl2 = []
lvl3 = []
